[gd_scene load_steps=23 format=3 uid="uid://bihrtr6avjvul"]

[ext_resource type="Texture2D" uid="uid://glvlqimxyq8t" path="res://assets/sprite_pack/Enemies/Slime/Idle-Run (44x30).png" id="1_rldp6"]
[ext_resource type="Script" uid="uid://bk6q2f6r7sy60" path="res://scripts/slime.gd" id="2_ahq63"]

[sub_resource type="Shader" id="Shader_ahq63"]
code = "shader_type canvas_item;
instance uniform vec4 modulate_color : source_color;
instance uniform float hit = 0.0;
uniform sampler2D noise : repeat_enable;
instance uniform float die = 0.0;

void vertex() {

	if (hit > 0.5) {
		COLOR = modulate_color;
	}
}

void fragment() {
	float noise_val = texture(noise,UV + TIME/20.0).x - 0.5;
	COLOR *= texture(TEXTURE,vec2 (UV.x + noise_val / 300.0 , UV.y + noise_val / 400.0 ));

	float x = texture(noise, UV + TIME/2.0).x;
	
	if ((die) > x){
		COLOR = vec4(0.0,0.0,0.0,0.0);

	}
	// Called for every pixel the material is visible on.
}

//void light() {
//	// Called for every pixel for every light affecting the CanvasItem.
//	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_dhx5m"]
noise_type = 3
frequency = 0.0248

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_rw74k"]
seamless = true
seamless_blend_skirt = 1.0
noise = SubResource("FastNoiseLite_dhx5m")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ahq63"]
shader = SubResource("Shader_ahq63")
shader_parameter/noise = SubResource("NoiseTexture2D_rw74k")

[sub_resource type="AtlasTexture" id="AtlasTexture_ahq63"]
atlas = ExtResource("1_rldp6")
region = Rect2(0, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h4y0"]
atlas = ExtResource("1_rldp6")
region = Rect2(44, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_b58ev"]
atlas = ExtResource("1_rldp6")
region = Rect2(88, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ankfk"]
atlas = ExtResource("1_rldp6")
region = Rect2(132, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_e12yk"]
atlas = ExtResource("1_rldp6")
region = Rect2(176, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhme6"]
atlas = ExtResource("1_rldp6")
region = Rect2(220, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhx0m"]
atlas = ExtResource("1_rldp6")
region = Rect2(264, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_7uxu4"]
atlas = ExtResource("1_rldp6")
region = Rect2(308, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdcui"]
atlas = ExtResource("1_rldp6")
region = Rect2(352, 0, 44, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikdmk"]
atlas = ExtResource("1_rldp6")
region = Rect2(396, 0, 44, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_jjup5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahq63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h4y0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b58ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ankfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e12yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhme6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhx0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uxu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdcui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikdmk")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wfyvu"]
size = Vector2(26, 23)

[sub_resource type="Animation" id="Animation_b58ev"]
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:instance_shader_parameters/die")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.015]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:instance_shader_parameters/hit")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:instance_shader_parameters/modulate_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4h4y0"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:instance_shader_parameters/die")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.015, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:instance_shader_parameters/hit")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.5, 0.5]
}

[sub_resource type="Animation" id="Animation_ahq63"]
resource_name = "hit"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:instance_shader_parameters/hit")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.5, 1.0, 1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:instance_shader_parameters/modulate_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b58ev"]
_data = {
&"RESET": SubResource("Animation_b58ev"),
&"die": SubResource("Animation_4h4y0"),
&"hit": SubResource("Animation_ahq63")
}

[node name="Slime" type="AnimatedSprite2D"]
texture_filter = 1
material = SubResource("ShaderMaterial_ahq63")
instance_shader_parameters/die = -0.015
instance_shader_parameters/hit = 1.0
instance_shader_parameters/modulate_color = Color(1, 1, 1, 1)
position = Vector2(40, 72)
sprite_frames = SubResource("SpriteFrames_jjup5")
autoplay = "default"
frame = 6
frame_progress = 0.107869
offset = Vector2(0, -15)
script = ExtResource("2_ahq63")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_wfyvu")

[node name="RightRay" type="RayCast2D" parent="."]
position = Vector2(0, -12)
target_position = Vector2(19, 0)

[node name="LeftRay" type="RayCast2D" parent="."]
position = Vector2(0, -12)
target_position = Vector2(-19, 0)

[node name="DownRightRay" type="RayCast2D" parent="."]
position = Vector2(19, -12)
target_position = Vector2(0, 18)

[node name="DownLeftRay" type="RayCast2D" parent="."]
position = Vector2(-19, -12)
target_position = Vector2(0, 18)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_b58ev")
}

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
